# WhoIsTalking

./: .gitignore  docker-compose.yaml  readme.md
audio-analyzer/: Dockerfile  default.conf  package-lock.json  package.json  tailwind.config.ts
audio-analyzer/app/: globals.css  page.tsx
audio-analyzer/components/: audio-upload.tsx  conversation-display.tsx  footer.tsx  loading-indicator.tsx  waveform-player.tsx
audio-analyzer/lib/: api.ts
speaker-diary/: config.yaml
speaker-diary/model/: model.py
whoisspeaking/: .dockerignore  Dockerfile  Dockerfile_celery  app.py  celery_worker.py  pyproject.toml  requirements.txt  supervisord.conf  utils.py
whoisspeaking/routes/: results.py  tasks.py
whoisspeaking/src/whoisspeaking/: app.py  celery_worker.py  utils.py
whoisspeaking/src/whoisspeaking/routes/: results.py  tasks.py
whoisspeaking/src/whoisspeaking/websocket/: socket.py
whoisspeaking/websocket/: socket.py
wip_frontend/wip_project/: package-lock.json  package.json
