[project]
name = "whoisspeaking"
version = "0.1.0"
description = ""
authors = [
    {name = "Edgar Mevaa",email = "mevaed4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "groq (>=0.22.0,<0.23.0)",
    "requests (>=2.32.3,<3.0.0)",
    "celery (>=5.5.1,<6.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "redis (>=5.2.1,<6.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "aiohttp (>=3.11.16,<4.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[tool.poetry]
packages = [{include = "whoisspeaking", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
